<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:layout_weight="1">

        <LinearLayout
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left">

            <ImageView android:id="@+id/photo_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"/>

            <Button android:id="@+id/photo_button"
            android:text="@string/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
            android:text="@string/photo_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"/>

            <EditText android:id="@+id/photo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_title_hint"/>

            <Button
            android:id="@+id/photo_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/send_picture"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_weight="1">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_details_label"
        style="?android:listSeparatorTextViewStyle"/>

        <Button
        android:id="@+id/photo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"/>

        <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"/>

    </LinearLayout>

</LinearLayout>